# mai_vk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: mai.h  mai_app.h  mai_renderer.h  mai_utils.h  vk_buffer.h  vk_cmd.h  vk_context.h  vk_descriptor.h  vk_image.h  vk_pipeline.h  vk_render.h  vk_shader.h  vk_swapchain.h  vk_sync.h
include/mai_vk_backend/: vk_buffer.h  vk_cmd.h  vk_context.h  vk_descriptor.h  vk_image.h  vk_pipeline.h  vk_render.h  vk_shader.h  vk_swapchain.h  vk_sync.h
shaders/: frag.spv  main.frag  main.vert  vert.spv
shaders/spvs/: frag.fspv  main.vspv
src/: mai.cpp  mai_app.cpp  mai_renderer.cpp  main.cpp  vk_buffer.cpp  vk_cmd.cpp  vk_context.cpp  vk_descriptor.cpp  vk_image.cpp  vk_pipeline.cpp  vk_render.cpp  vk_shader.cpp  vk_swapchain.cpp  vk_sync.cpp
